tests/should_fail/dead_term.stderr
error: The `dead` term can only be used for the body of `logic(opaque)` functions
  --> dead_term.rs:11:5
   |
11 |     dead
   |     ^^^^

error: aborting due to 1 previous error

